# ETL_OKUO

./: .gitignore  README.md  pyproject.toml
lambda_image/: Dockerfile  lambda_function.py  requirements.txt  s3_client.py
src/ETL_OKUO/: config.py  main.py  s3_client.py
